# Fintel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: ARCHITECTURE.md  CANONICAL_CONTRACT.md  ROADMAP.md
parser/: pyproject.toml
src/parsers/: CLAUDE.md
src/parsers/angelone/: adapter.py
src/parsers/groww/: adapter.py
src/parsers/indmoney/: adapter.py
src/parsers/zerodha/: adapter.py
tests/fixtures/groww/: sample_pnl.xlsx
tests/parsers/: test_groww.py
